# Lab

C++/: main
C++/Basics/: Makefile  main  main.cpp
C++/DSA/: BST.cpp  Makefile  bst  main
C++/DSA/CS_Dojo/: arrays_and_memory.cpp  main  main.cpp
C++/DSA/Trees/: binary_tree  binary_tree.cpp
C++/DSA/linked_lists/: linked_list.cpp  main  node.h
C++/DSA/pointers_and_classes/: main  main.cpp  pointers  pointers.cpp
C++/DSA/stacks_and_queues/: queues.cpp  stacks.cpp
C++/DSA/tree_traversal/: main  tree_traversal.cpp
C++/DSA/trees/: main  main.cpp  tree.cpp  tree.h
C++/guessing_game/cpp-project/: CMakeLists.txt  README.md
HomeLab/web/homelab/: nohup.out  package-lock.json  package.json
JSON/: data.json  data.py
Python/async/: main.py  threads.py
Python/crash_course/: classes.py  data_structures.py  functions.py  main.py
Python/roadmap.sh/: README.md
Rust/Rust-by-Example/: Cargo.toml  README.md  create_files.sh  custom  ferris.txt  hello  liblib.rlib
Rust/Rust-by-Example/src/01_hello/: comments.rs  debug.rs  display.rs  doc_comments.rs  formatted_print.rs  formatting.rs  hello.rs  list.rs
Rust/Rust-by-Example/src/02_primitives/: arrays.rs  literals.rs  tuples.rs
Rust/Rust-by-Example/src/03_custom_types/: c_like.rs  constants.rs  enum_use.rs  enums.rs  structs.rs  testcase_linked_list.rs
Rust/Rust-by-Example/src/04_variable_bindings/: declare.rs  freezing.rs  mutability.rs  scope.rs
Rust/Rust-by-Example/src/05_types/: aliasing.rs  casting.rs  inference.rs  literals.rs
Rust/Rust-by-Example/src/06_conversion/: from_into.rs  string.rs  tryfrom_tryinto.rs
Rust/Rust-by-Example/src/07_expressions/: expressions.rs
Rust/Rust-by-Example/src/08_flow_control/: binding.rs  destructuring.rs  for.rs  guards.rs  if_else.rs  if_let.rs  loop.rs  match.rs  nesting.rs  returning.rs  while.rs  while_let.rs
Rust/Rust-by-Example/src/09_functions/: anonymity.rs  capture.rs  closure_examples.rs  closures.rs  diverging_functions.rs  functions.rs  higher_order_functions.rs  input_functions.rs  input_parameters.rs  methods.rs  output_parameters.rs
Rust/Rust-by-Example/src/10_modules/: my.rs  split.rs  struct_visibility.rs  super.rs  use.rs  visibility.rs
Rust/Rust-by-Example/src/11_crates/: lib.rs  using_lib.rs
Rust/Rust-by-Example/src/12_cargo/: conventions.rs  dependencies.rs  testing.rs
Rust/Rust-by-Example/src/13_attributes/: cfg.rs  crates.rs  custom.rs  dead_code.rs
Rust/Rust-by-Example/src/14_generics/: associated_items.rs  bounds.rs  functions.rs  generics.rs  implementation.rs  multiple_bounds.rs  new_type_idiom.rs  phantom_type_parameters.rs  traits.rs  where_clauses.rs
Rust/Rust-by-Example/src/15_scoping_rules/: aliasing.rs  borrowing.rs  bounds.rs  coercion.rs  elision.rs  explicit.rs  functions.rs  lifetimes.rs  methods.rs  mutability.rs  ownership.rs  raii.rs  ref_pattern.rs  static.rs  structs.rs  traits.rs
Rust/Rust-by-Example/src/16_traits/: clone.rs  derive.rs  disambiguating.rs  drop.rs  impl_trait.rs  iterators.rs  operator_overloading.rs  returning_traits.rs  supertraits.rs  traits.rs
Rust/Rust-by-Example/src/17_macros/: designators.rs  dry.rs  dsl.rs  overload.rs  repeat.rs  syntax.rs  variadics.rs
Rust/Rust-by-Example/src/18_error_handling/: aliases.rs  combinators.rs  defining_error_type.rs  early_returns.rs  enter_question_mark.rs  iterating_over_results.rs  map.rs  multiple_error_types.rs  option_unwrap.rs  panic.rs  pulling_results_out.rs  result.rs  unpacking_options.rs  wrapping_errors.rs
Rust/Rust-by-Example/src/19_std_library_types/: alt_key_types.rs  arc.rs  box_stack_heap.rs  hashmap.rs  hashset.rs  option.rs  panic.rs  question_mark.rs  rc.rs  result.rs  strings.rs  vectors.rs
Rust/Rust-by-Example/src/20_testing/: dev_dependencies.rs  documentation_testing.rs  file_io.rs  file_system.rs  hello.txt  integration_testing.rs  unit_testing.rs
Rust/Rust-by-Example/src/21_unsafe_operations/: calling_unsafe_functions.rs  implementing_unsafe_traits.rs  mutable_statics.rs  unsafe_operations.rs
Rust/Rust-by-Example/src/22_compatibility/: raw_identifiers.rs
Rust/TicTacToe/: README.md
Rust/guessing_game/: README.md
Rust/hello/src/: main.rs
VHDL/Ping-Pong/: VGA.bdf  make_image0.bsf  make_image0.vhd  make_image1.bsf  make_image1.vhd  make_image1.vhd.bak  vga_control.bsf  vga_control.qpf  vga_control.qsf  vga_control.qws
VHDL/finalproj_finished/: VGA.bdf  make_image1.vhd  make_image1.vhd.bak  qar_info.json  vga_control.qpf  vga_control.qsf  vga_control.qws  vga_control.restore.rpt
Verilog/Lab2/: Lab2.asm.rpt  Lab2.cdf  Lab2.done  Lab2.fit.rpt  Lab2.fit.summary  Lab2.flow.rpt  Lab2.jdi  Lab2.map.rpt  Lab2.map.summary  Lab2.pin  Lab2.qpf  Lab2.qsf  Lab2.qws  Lab2.sta.rpt  eight_bit.v  eight_bit.v.bak  multiplexer.v  seven_segment.v  seven_segment.v.bak  three_bit.v  three_bit.v.bak  top.v  top.v.bak
Verilog/Lab3/: Lab3 - Copy.qsf  Lab3.asm.rpt  Lab3.cdf  Lab3.done  Lab3.eda.rpt  Lab3.fit.rpt  Lab3.fit.summary  Lab3.flow.rpt  Lab3.jdi  Lab3.map.rpt  Lab3.map.summary  Lab3.pin  Lab3.qpf  Lab3.qsf  Lab3.qws  Lab3.sta.rpt  binary_to_decimal.v  top.v  top.v.bak
Verilog/Lab4/: gated_d.v  gated_d.v.bak  rs.v  rs.v.bak  three_storage.v.bak  top.asm.rpt  top.cdf  top.done  top.fit.rpt  top.fit.summary  top.flow.rpt  top.jdi  top.map.rpt  top.map.summary  top.pin  top.qpf  top.qsf  top.qws  top.sta.rpt  top.sta.summary  top.v
Verilog/Lab5/: lab5.asm.rpt  lab5.cdf  lab5.done  lab5.fit.rpt  lab5.fit.summary  lab5.flow.rpt  lab5.jdi  lab5.map.rpt  lab5.map.summary  lab5.pin  lab5.qpf  lab5.qsf  lab5.qws  lab5.sta.rpt  lab5.sta.summary  top.v
Verilog/Lab6/: bin_to_7seg.v  counter.v  top.qpf  top.qsf  top.qws  top.v  top.v.bak
Verilog/Lab7/: adder.v  multiplier.v  subtractor.v  top.qpf  top.qsf  top.qws  top.v  top.v.bak
Verilog/Midterm_Makeup/: Make-up midterm 2025.docx  morse_code.v  top.asm.rpt  top.cdf  top.done  top.fit.rpt  top.fit.summary  top.flow.rpt  top.jdi  top.map.rpt  top.map.summary  top.pin  top.qpf  top.qsf  top.qws  top.sta.rpt  top.sta.summary  top.v
Verilog/lab1/: top.qpf  top.qsf  top.v  top.v.bak
(+658 files in other folders)
